--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,3 +43,19 @@ trigger:
      repository: $(imageName)
      command: build
      Dockerfile: app/Dockerfile
+     trigger:
+ - main
+
+ pool:
+   vmImage: 'ubuntu-latest' 
+
+ variables:
+   imageName: 'pipelines-javascript-docker'
+
+ steps:
+ - task: Docker@2
+   displayName: Build an image
+   inputs:
+     repository: $(imageName)
+     command: build
+     Dockerfile: app/Dockerfile
